# tower-serve-static

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  macros.rs  serve_dir.rs  serve_file.rs
tests/assets/: text.txt
