[package]
name = "tower-serve-static"
description = "Tower service that serves static files."
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jannik4/tower-serve-static"
homepage = "https://github.com/jannik4/tower-serve-static"

[dependencies]
bytes = "1"
futures-util = { version = "0.3", default_features = false, features = [] }
http = "1"
http-body = "1"
http-body-util = "0.1"
pin-project = "1"
tower-service = "0.3"

mime = "0.3"
mime_guess = "2"
tokio = { version = "1", default_features = false, features = ["fs"] }
tokio-util = { version = "0.7", default_features = false, features = ["io"] }
percent-encoding = "2.1.0"

include_dir = "0.7.0"

[dev-dependencies]
axum = { version = "0.7.3" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.10", features = ["buffer", "util", "retry", "make"] }
